Add env config to docker
Signed-off-by: Anderson Fernandes <fernandesanderson14@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,9 @@ services:
   app:
     build:
         context: ./
+    env_file:
+      - .env
     tty: true
     stdin_open: true
-    environment:
-      PYNGUIN_DANGER_AWARE: true
     volumes:
       - ./:/home/app
