Add ansible submodule
Signed-off-by: Anderson Fernandes <fernandesanderson14@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = sentry
 	url = git@github.com:andersonfernandes/sentry.git
 	branch = tests-generation-and-type-inference
+[submodule "ansible"]
+	path = ansible
+	url = git@github.com:andersonfernandes/ansible.git
+	branch = tests-generation-and-type-inference
